# docker-qt-exercises

./: Dockerfile  run_tp_container.sh  task.txt
src/: CMakeLists.txt  main.cpp  main.qml  resources.qrc
